--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       </nav>
       <section>
         <h1>Art is eternal happiness</h1>
-        <button>Work with us</button>
+        <button class="custom-btn-1">Work with us</button>
       </section>
       <button id="scroll-down">Scroll down &darr;</button>
     </header>
     <main>
-      <section id="section-1" class="vh-100">
-        <div class="container space-around">
+      <section id="section-1">
+        <div class="container space-around vh-100">
           <div>
             <h2 class="section-header-1 gray-color-1">What we do</h2>
             <hr class="section-hr gray-color-1" />
@@ -85,8 +85,8 @@
           </div>
         </div>
       </section>
-      <section id="section-2" class="green-bg-color vh-100">
-        <div class="container space-around">
+      <section id="section-2" class="green-bg-color">
+        <div class="container space-around vh-100">
           <div>
             <h2 class="section-header-1 green-color-1">Our Latest Work</h2>
             <hr class="section-hr green-color-2" />
@@ -116,6 +116,151 @@
 
           <button>View more work &rarr;</button>
         </div>
+      </section>
+      <section id="section-3" class="white-bg-color ">
+        <div class="container vh-50 space-around">
+          <div>
+            <h2 class="section-header-1 gray-color-1">Testimonials</h2>
+            <hr class="section-hr gray-color-1" />
+            <h3 class="section-header-2 gray-color-2">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, ipsam?
+            </h3>
+          </div>
+          <div class="carousel">
+            <button>&lt;</button>
+            <article>
+              <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora labore quod facere, nam, impedit corrupti quisquam quia vel corporis esse sint incidunt dolores officiis eos nulla."</p>
+              <div id="user-card">
+                <div>
+                  <img src="./img/ceo.png" alt="">
+                </div>
+                <h2>Mr. Herp</h2>
+                <h3>CEO of Meme, Inc.</h3>
+              </div>
+            </article>
+            <button>&gt;</button>
+          </div>
+      </section>
+      <section id="section-4" class="gray-bg-color">
+        <div class="container vh-50 space-around">
+          <div>
+            <h2 class="section-header-1 gray-color-1">Our Happy Client</h2>
+            <hr class="section-hr gray-color-1" />
+            <h3 class="section-header-2 gray-color-2">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi ad ipsum quo.
+            </h3>
+          </div>
+          <div id="partners">
+              <div id="partner-1"></div>
+              <div id="partner-2"></div>
+              <div id="partner-3"></div>
+              <div id="partner-4"></div>
+              <div id="partner-5"></div>
+              <div id="partner-6"></div>
+              <div id="partner-7"></div>
+              <div id="partner-8"></div>
+          </div>
+          <button>See All Client &rarr;</button>
+      </section>
+      <section id="section-5" class="green-bg-color">
+        <section class="vh-80">
+          <div class="container space-around">
+            <div>
+              <h2 class="section-header-1 green-color-1">Meet the team</h2>
+              <hr class="section-hr green-color-2" />
+              <h3 class="section-header-2 green-color-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ipsa sapiente odit!
+              </h3>
+            </div>
+            <div id="team">
+              <article>
+                <div id="memberPhoto1"></div>
+                <div class="vl"></div>
+                <h4>Krisna Wijaya</h4>
+                <div class="socials">
+                  <a href="">
+                    <div class="us"></div>
+                  </a>
+                  <a href="">
+                    <div class="be"></div>
+                  </a>
+                  <a href="">
+                    <div class="tt"></div>
+                  </a>
+                </div>
+              </article>
+              <article>
+                <div id="memberPhoto2"></div>
+                <div class="vl"></div>
+                <h4>Gabriel Yoshua</h4>
+                <div class="socials">
+                  <a href="">
+                    <div class="us"></div>
+                  </a>
+                  <a href="">
+                    <div class="be"></div>
+                  </a>
+                  <a href="">
+                    <div class="tt"></div>
+                  </a>
+                </div>
+              </article>
+              <article>
+                <div id="memberPhoto3"></div>
+                <div class="vl"></div>
+                <h4>Adik N.K.L</h4>
+                <div class="socials">
+                  <a href="">
+                    <div class="us"></div>
+                  </a>
+                  <a href="">
+                    <div class="be"></div>
+                  </a>
+                  <a href="">
+                    <div class="tt"></div>
+                  </a>
+                </div>
+              </article>
+              <article>
+                <div id="memberPhoto4"></div>
+                <div class="vl"></div>
+                <h4>Zan D.J</h4>
+                <div class="socials">
+                  <a href="">
+                    <div class="us"></div>
+                  </a>
+                  <a href="">
+                    <div class="be"></div>
+                  </a>
+                  <a href="">
+                    <div class="tt"></div>
+                  </a>
+                </div>
+              </article>
+              <article>
+                <div id="memberPhoto5"></div>
+                <div class="vl"></div>
+                <h4>Faizal Febri</h4>
+                <div class="socials">
+                  <a href="">
+                    <div class="us"></div>
+                  </a>
+                  <a href="">
+                    <div class="be"></div>
+                  </a>
+                  <a href="">
+                    <div class="tt"></div>
+                  </a>
+                </div>
+              </article>
+            </div>
+          </div>
+        </section>
+        <section class="green-bg-color-2 vh-20">
+          <div class="container space-around">
+            <button class="custom-btn-1">Work with us</button>
+          </div>
+        </section>
       </section>
     </main>
     <footer></footer>
